# carbide

./: Cargo.toml  README.md
.github/workflows/: rust.yml
carbide-compiler/: Cargo.toml
carbide-compiler/src/: cli.rs  errors.rs  main.rs
carbidec/: Cargo.toml
carbidec/src/: cli.rs  errors.rs  main.rs
carbidelib/: Cargo.toml
carbidelib/src/: errors.rs  lib.rs  tokens.rs  types.rs
carbidelib/src/parser/: ast.rs  expr.rs  mod.rs
carbidelib/tests/: parser_tests.rs
carbidelib/tests/parser/: mod.rs  number_tests.rs  string_tests.rs
compiler/carbidec/: Cargo.toml
compiler/carbidec/src/: main.rs
