[workspace]
resolver = "3"
members = ["compiler/carbidec", "library/carbide_lexer", "library/carbide_core", "library/carbide_parser"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny" 

[workspace.dependencies]
carbide_core = { path = "library/carbide_core"}
carbide_lexer = { path = "library/carbide_lexer"}
carbide_parser = { path = "library/carbide_parser"}
